# duo-orm-preview

./: .gitignore  AGENTS.md  README.md  pyproject.toml
duo_orm/: __init__.py  __main__.py
duo_orm/core/: AGENTS.md  __init__.py  database.py  engines.py  exceptions.py  expressions.py  model.py  query_builder.py  query_shapers.py  query_terminals.py  query_validation.py  sessions.py
duo_orm/migrations/: AGENTS.md  __init__.py  cli.py  config.py  env_template.py  runner.py  scaffold.py
duo_orm/schemas/: AGENTS.md  __init__.py  mapping.py
tests/: AGENTS.md  __init__.py  test_core.py  test_migrations.py  test_schemas.py
tests/integration/: __init__.py  helpers.py  test_app_flow.py
