[project]
name = "duo-orm-preview"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.8",
    "invoke>=2.0",
    "pydantic>=2.0",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
]

[project.scripts]
duo-orm = "duo_orm.migrations.cli:main"

[tool.setuptools.packages.find]
include = ["duo_orm*"]
